main/default/objects/Attendee_solution__c/Attendee_solution__c.object-meta.xml
<CustomObject>
    <label>Attendee (solution)</label>
    <nameField>
        <label>Attendee (solution) Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attendees (solution)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>