main/default/objects/Attendee_solution__c/fields/Festival__c.field-meta.xml
<CustomField>
    <fullName>Festival__c</fullName>
    <label>Festival</label>
    <referenceTo>Festival_solution__c</referenceTo>
    <relationshipLabel>Attendees (solution)</relationshipLabel>
    <relationshipName>Attendees_solution</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>