main/default/objects/Attendee_solution__c/fields/Purchase_Source__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Source__c</fullName>
    <description>Where the attendee got their ticket from.</description>
    <label>Purchase Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Official Website</fullName>
            </value>
            <value>
                <fullName>3rd Party Ticket Vendor</fullName>
            </value>
            <value>
                <fullName>Box Office</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>