main/default/objects/Attendee_solution__c/fields/Tickets_purchased__c.field-meta.xml
<CustomField>
    <fullName>Tickets_purchased__c</fullName>
    <description>Number of tickets purchased by the attendee.</description>
    <label>Tickets purchased</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>