main/default/objects/Attendee_solution__c/fields/Total_Spent__c.field-meta.xml
<CustomField>
    <fullName>Total_Spent__c</fullName>
    <description>This determines how much the attendee spent on the amount of tickets they purchased. General admission tickets cost $50, and VIP tickets cost $100.</description>
    <formula>IF(ISPICKVAL(Ticket_Type__c, &quot;General Admission&quot;), 50 *  Tickets_purchased__c , 100 *  Tickets_purchased__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Spent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>