main/default/objects/Attendee_solution__c/validationRules/No_more_than_8_tickets_per_attendee.validationRule-meta.xml
<ValidationRule>
    <fullName>No_more_than_8_tickets_per_attendee</fullName>
    <active>true</active>
    <description>To avoid scalping, we limit the number of tickets that any one person can purchase to 8.</description>
    <errorConditionFormula>Tickets_purchased__c  &gt; 8</errorConditionFormula>
    <errorMessage>One attendee can purchase no more than 8 tickets!</errorMessage>
</ValidationRule>